--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -3,6 +3,17 @@
 
 #prefWindow
 {
+    .window-wrapper
+    {
+        padding: 0;
+    }
+    
+    #pref-filter-textbox
+    {
+        border-radius: 0;
+        margin: 0;
+        margin-bottom: 1px
+    }
 
     treecols
     {
@@ -12,7 +23,7 @@
 
     treechildren::-moz-tree-row
     {
-        height: 18px;
+        height: 24px;
     }
 
     treechildren::-moz-tree-cell-text
