Pref: Abstract pref validation logic to the UI layer
Only works on long and string, currently only highlights invalid fields

(integrated from master branch change 9.2.1-806-g94dd3c8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/prefs/prefs.css
+++ b/src/chrome/komodo/skin/prefs/prefs.css
@@ -52,3 +52,9 @@ groupbox#pref-languages-primary-selector-groupbox.collapse {
 #docSyntaxCheckByLang > vbox:not([active]) {
     visibility: collapse;
 }
+
+/* Todo: Implement in platform/global CSS */
+*[invalid="true"]
+{
+    outline: 1px solid red;
+}
