UI: Fix up Breadcrumbs integration with new UI
(integrated from master branch change 9.2.1-736-g0c04274 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -219,3 +219,18 @@ image.tab-icon
     max-width: 14px;
     height: 14px;
 }
+
+.breadcrumb.folder .breadcrumb-icon,
+.breadcrumb .folder-item > .menu-iconic-left,
+.folder-icon
+{
+    .icon();
+    .icon-folder();
+}
+
+.breadcrumb-arrow
+{
+    .icon();
+    .icon-chevron-right();
+}
+}
