--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -2,8 +2,10 @@
 @import url("resource://profile/colors.less");
 @import url("chrome://komodo/skin/global/reset.less");
 @import url("chrome://komodo/skin/global/normalize.less");
+@import url("chrome://komodo/skin/global/normalize-mixins.less");
 @import url("chrome://komodo/skin/global/bindings.less");
 @import url("chrome://komodo/skin/global/chromeless.less");
+@import url("chrome://komodo/skin/global/prefs.less");
 @import url("chrome://komodo/skin/global/icons.less");
 
 @import url("chrome://komodo/skin/global/scrollbars.less");
@@ -21,7 +23,7 @@
 .widgetToolbarWrap
 {
     height: 27px;
-    background: @primary;
+    background: @contrast;
     -moz-box-pack: center;
     -moz-box-align: center;
     
@@ -36,7 +38,7 @@
 {
     height: 27px;
     padding: 0 0 2px 0;
-    background: @primary;
+    background: @contrast;
     -mox-box-align: center;
     -moz-box-pack: start;
     
