--- a/src/chrome/komodo/skin/global/workarounds.less
+++ b/src/chrome/komodo/skin/global/workarounds.less
@@ -44,12 +44,12 @@ menuitem[type="radio"]
     }
 }
 
-/* Use @selected-fg color for selected item in autocomplete popup
+/* Use @selected-foreground color for selected item in autocomplete popup
  * Not sure where it should be, but I put it here.
  */
 .ko-autocomplete-item[selected="true"] {
     box > text-wrapper > description {
-        color: @selected-fg;
+        color: @selected-foreground;
     }
 }
 
