--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -1,5 +1,6 @@
 [anonid="statusbar-message-deck-default"]
 @import url("chrome://komodo/skin/global/colors.less");
+@import url("resource://profile/colors.less");
 
 [anonid="breadcrumbBar"]
 {
@@ -54,7 +55,7 @@
         &:hover .toolbarbutton-text
         {
            background: @button;
-           color: @button-fg;
+           color: @button-foreground;
         }
         
         .toolbarbutton-icon
