--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -55,18 +55,14 @@
  * The main window cannot have border-radius if it also has a background, so we
  * have to put the background one node lower
  */
-:root > deck, :root[hidechrome="true"] .window-wrapper, :root:not([hidechrome="true"])
+#komodo_main > #komodo-box,
+:root:not([hidechrome="true"]):not(.pref-window)
 {
     &:not(#komodo_main)
     {
         background: @background;
     }
     color: @foreground;
-}
-
-:root[hidechrome="true"].dialog .window-wrapper, :root:not([hidechrome="true"]).dialog, :root.pref-window:not(.dialog)
-{
-    background: @primary !important;
 }
 
 /* Resize handlers */
@@ -94,7 +90,7 @@ resizer[dir="bottomright"] { cursor: se-resize; -moz-appearance:none; }
 
 resizer
 {
-    background: @primary;
+    background: @contrast;
 }
 
 /**
@@ -124,7 +120,7 @@ resizer
      */
     resizer[dir="left"], resizer[dir="bottomleft"]
     {
-        background: @primary !important;
+        background: @contrast !important;
     }
     
     /* account for resizer taking up space */
