--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -1,4 +1,5 @@
 @import url("chrome://komodo/skin/global/global.less");
+
 /* Komodo Toolbox */
 
 #toolbox_main
@@ -6,6 +7,8 @@
     border: 0;
     padding: 4px;
     background: @special;
+    
+    .normalize-colors(special);
     
     toolbaritem
     {
@@ -82,7 +85,7 @@
 #toolbox_side
 {
     width: 48px;
-    background: @primary;
+    background: @contrast;
     border-right: 1px solid @border;
     -moz-box-orient: vertical;
     
@@ -152,7 +155,7 @@ statusbar
     height: 28px;
     padding-bottom: 2px;
     border-bottom: 1px solid @background;
-    background: @primary;
+    background: @contrast;
 
     statusbarpanel > label
     {
@@ -229,39 +232,11 @@ ko-pane[type="icons"] tab
     }
 }
 
-/* Pref Windows */
-
-.pref-window:not(#prefWindow)
-{
-    padding: 0 24px;
-}
-
 /* HUD elements */
 
 .hud, #editorTooltip
 {
-    background: @primary;
-}
-
-#commando-panel
-{
-    label,
-    description
-    {
-        font-size: 1rem !important;
-        color: @selected-fg;
-    }
-
-    separator
-    {
-        height: 1px;
-        background: @border;
-    }
-
-    #commando-tip
-    {
-        background: @secondary;
-    }
+    background: @contrast;
 }
 
 /* Quicklaunch */
@@ -284,5 +259,5 @@ ko-pane[type="icons"] tab
 {
     height: 27px;
     border: 0;
-    background: @primary;
+    background: @contrast;
 }
