--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -1,11 +1,25 @@
 @import url("chrome://komodo/skin/global/colors.less");
 @import url("resource://profile/colors.less");
 
+@import url("chrome://komodo/skin/global/normalize-mixins.less");
+
 #commando-panel
 {
     border: 0;
+    background: @special;
+    color: @foreground-special;
     -moz-box-orient: horizontal;
+    border-radius: 2px;
     
+    .normalize-colors(special);
+    
+    label,
+    description
+    {
+        font-size: 1rem !important;
+        color: @selected-foreground-special;
+    }
+
     &.blocked
     {
         & > *
@@ -16,7 +30,7 @@
     
     &.previewing:not(.maximized) #commando-preview
     {
-        border-left: @border;
+        background: @contrast;
         width: 600px;
     }
     
@@ -44,6 +58,13 @@
     #commando-search-wrapper
     {
         margin: 4px;
+        background: @textbox-special;
+        color: @textbox-foreground-special;
+        
+        textbox
+        {
+            color: @textbox-foreground-special;
+        }
     }
 
     #commando-search
@@ -71,10 +92,10 @@
         .icon
         {
             background-repeat: no-repeat;
-            width: 16px;
-            height: 16px;
-            background-size: 16px;
-            max-height: 16px;
+            width: 14px;
+            height: 14px;
+            background-size: 14px;
+            max-height: 14px;
             padding-top: 3px;
             margin-right: 4px;
         }
@@ -92,7 +113,7 @@
         max-width: 490px;
         margin: 0;
         padding: 4px;
-        background: transparent !important;
+        background: @contrast-special;
         opacity: 0.6;
         
         &[tip-type="error"]
@@ -171,7 +192,7 @@
             
             .menulist-icon
             {
-                width: 16px;
+                width: 14px;
             }
         }
         
@@ -224,10 +245,10 @@
             .icon
             {
                 background-repeat: no-repeat;
-                width: 16px;
-                height: 16px;
-                max-height: 16px;
-                background-size: 16px 16px;
+                width: 14px;
+                height: 14px;
+                max-height: 14px;
+                background-size: 14px 14px;
             }
             
             .number-wrapper
