UI: More icon polish
(integrated from master branch change 9.2.1-740-g9eaa075 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/components/scrolltabs.less
+++ b/src/chrome/komodo/skin/global/components/scrolltabs.less
@@ -171,8 +171,11 @@ tab[widget^="debugsession"]
 
 .tab-icon {
     padding: 0px;
-    margin: 0px;
-    margin-right: 4px;
+    margin: 0px;    
+}
+
+label[value].tab-text:not([value=""]) {
+    margin: 0 4px;
 }
 
 /* Menuitem for the selected tab in the tabs-droplist. */
