--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -47,3 +47,12 @@
         margin: 0;
     }
 }
+
+/* Widgets */
+
+#notificationWidget
+{
+    #filter-error { color: @state-error; }
+    #filter-warning { color: @state-warning; }
+    #filter-info { color: @state-info; }
+}
