--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?die1gv');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?die1gv#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?die1gv') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?die1gv') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?die1gv#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ca6xqd');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ca6xqd#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ca6xqd') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ca6xqd') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ca6xqd#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -879,6 +879,71 @@
 .icon-map-signs {
     &:before {
         content: @icon-map-signs;
+    }
+}
+.icon-clock-o {
+    &:before {
+        content: @icon-clock-o;
+    }
+}
+.icon-stop3 {
+    &:before {
+        content: @icon-stop3;
+    }
+}
+.icon-plus-circle3 {
+    &:before {
+        content: @icon-plus-circle3;
+    }
+}
+.icon-minus-circle {
+    &:before {
+        content: @icon-minus-circle;
+    }
+}
+.icon-times-circle {
+    &:before {
+        content: @icon-times-circle;
+    }
+}
+.icon-arrow-circle-right {
+    &:before {
+        content: @icon-arrow-circle-right;
+    }
+}
+.icon-group {
+    &:before {
+        content: @icon-group;
+    }
+}
+.icon-users {
+    &:before {
+        content: @icon-users;
+    }
+}
+.icon-circle-o {
+    &:before {
+        content: @icon-circle-o;
+    }
+}
+.icon-play-circle {
+    &:before {
+        content: @icon-play-circle;
+    }
+}
+.icon-trash {
+    &:before {
+        content: @icon-trash;
+    }
+}
+.icon-display3 {
+    &:before {
+        content: @icon-display3;
+    }
+}
+.icon-stop-circle {
+    &:before {
+        content: @icon-stop-circle;
     }
 }
 
