--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -169,3 +169,16 @@
 @icon-clone: "\f24d";
 @icon-map-pin: "\f276";
 @icon-map-signs: "\f277";
+@icon-clock-o: "\f017";
+@icon-stop3: "\f04d";
+@icon-plus-circle3: "\f055";
+@icon-minus-circle: "\f056";
+@icon-times-circle: "\f057";
+@icon-arrow-circle-right: "\f0a9";
+@icon-group: "\f0c0";
+@icon-users: "\f0c0";
+@icon-circle-o: "\f10c";
+@icon-play-circle: "\f144";
+@icon-trash: "\f1f8";
+@icon-display3: "\f26c";
+@icon-stop-circle: "\f28d";
