--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -342,7 +342,7 @@ button.unstyled
 
 :root[hidechrome="true"].dialog .window-wrapper,
 :root:not([hidechrome="true"]).dialog,
-dialog, :root.dialog, :root.pref-window
+dialog, :root.pref-window
 {
     color: @foreground;
     background: @contrast;
