--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -34,6 +34,14 @@
             width: 90px;
         }
     }
+    
+    & > #closebar toolbarbutton
+    {
+        margin: 0;
+        padding: 0;
+        
+        font-size: 10px;
+    }
 }
 
 :root[hidechrome="true"][titlebar="false"] .window-wrapper
@@ -44,6 +52,13 @@
     {
         visibility: collapse;
     }
+}
+
+:root[hidechrome="true"]:not([titlebar="false"]) #closebar,
+#prefWindow #closebar,
+#prefWindow #titlebar
+{
+    visibility: collapse;
 }
 
 #komodo_main:not([hidechrome="true"]) resizer
